--- a/index.css
+++ b/index.css
@@ -539,8 +539,8 @@ body {
     --bg-color: rgb(10, 10, 10);
     --text-color: #fff;
     --blog-gray-color: rgb(180, 180, 180);
-    --background-image: linear-gradient( 90deg, rgba(10, 10, 10, 0.3), rgb(10, 10, 10, 1)), url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80");
-    --background-background: linear-gradient( 0deg, rgba(10, 10, 10, 1), rgba(10, 10, 10, 0.6)), url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") center center fixed;
+    --background-image: linear-gradient( 90deg, rgba(10, 10, 10, 0.3), rgb(10, 10, 10, 1)), url("assets/milky-way-2695569.jpg");
+    --background-background: linear-gradient( 0deg, rgba(10, 10, 10, 1), rgba(10, 10, 10, 0.6)), url("assets/milky-way-2695569.jpg") center center fixed;
     --height: 50vh;
 }
 
@@ -570,6 +570,6 @@ body {
 
 @media (max-width: 800px) {
      :root {
-        --background-image: linear-gradient( 0deg, rgba(10, 10, 10, 1), rgba(10, 10, 10, 0)), url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") !important;
+        --background-image: linear-gradient( 0deg, rgba(10, 10, 10, 1), rgba(10, 10, 10, 0)), url("assets/milky-way-2695569.jpg") !important;
     }
 }
