--- a/index.css
+++ b/index.css
@@ -1,16 +1,97 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url("https://fonts.googleapis.com/css?family=Questrial");
 body {
-    margin: 0%;
-    padding: 0%;
-    width: 100vw;
+    margin: 0% !important;
+    padding: 0% !important;
+    width: 100vw !important;
     background: var(--bg-color);
     color: var(--text-color);
-    max-width: 100vw;
-    overflow-x: hidden;
-    align-items: center;
-    font-family: "Poppins", sans-serif;
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
+    align-items: center !important;
+    font-family: "Poppins", sans-serif !important;
 }
+
+.modal-wrapper {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    justify-content: center;
+    align-items: center;
+}
+/* The Modal (background) */
+.modal {
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background: rgb(20,20,20);
+    color: var(--text-color);
+    margin: auto;
+    padding: 20px;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: var(--text-color);
+    text-decoration: none;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  input {
+    background-color: #EBEBEB !important;
+    border-radius: 15px !important;
+    border: none !important;
+    opacity: 1;
+    min-width: 200px !important;
+    padding: 10px !important;
+    margin: 5px !important;
+}
+
+.input-group-append,
+.input-group-text {
+    border: none !important;
+    background-color: white !important;
+}
+
+.zoneDeTexte {
+    border: none;
+    margin: 5px !important;
+    background-color: #EBEBEB;
+    border-radius: 15px;
+    padding: 15px;
+    font-weight: 300 !important;
+    min-width: 200px !important;
+}
+
+.zoneDeTexte:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(30, 139, 255, 0.25);
+}
+
 
 #loading {
     width: 100vw;
@@ -36,6 +117,17 @@ body {
     border-bottom: 2px solid var(--text-color);
     border-radius: 50%;
     margin: 0;
+}
+
+#sending {
+    animation: rotate 0.5s infinite linear;
+    width: 10px;
+    height: 10px;
+    border: 2px solid var(--bg-color);
+    border-bottom: 2px solid var(--text-color);
+    border-radius: 50%;
+    margin: 0;
+    display: none;
 }
 
 @keyframes rotate {
@@ -194,10 +286,44 @@ body {
     font-weight: bold;
 }
 
-#footer_blog {
-    width: 90vw;
-    padding: 8vh 5vw;
-    text-align: center;
+#footer_blog {/* The Modal (background) */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      padding-top: 100px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+    
+    /* Modal Content */
+    .modal-content {
+      background-color: #fefefe;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+    }
+    
+    /* The Close Button */
+    .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
 }
 
 #footer_blog a {
@@ -535,6 +661,7 @@ body {
     background: var(--text-color);
 }
 
+
 :root {
     --bg-color: rgb(10, 10, 10);
     --text-color: #fff;
@@ -566,6 +693,16 @@ body {
 
 #blog_section section {
     background: rgb(20, 20, 20);
+}
+
+#alert_fail {
+    display: none;
+    color: red !important;
+}
+
+#alert_success {
+    display: none;
+    color:green !important;
 }
 
 @media (max-width: 800px) {
